<resources>
    <string name="app_name">Portfolio</string>
    <string name="slogan">Track Your Purse</string>
    <string name="loginbg">Login Backgroud image</string>
    <string name="login">Login</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="enter_full_name">Enter Full Name</string>
    <string name="enter_email_adress">Enter Email Adress</string>
    <string name="required">*Required\n</string>
    <string name="user_name">User Name</string>
</resources>