<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/signup"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".SignUp">

    <EditText
        android:id="@+id/singup_name"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:drawableStart="@drawable/baseline_person_24"
        android:paddingStart="10dp"
        android:text="@string/enter_full_name"
        android:background="@drawable/login_page_edittext"
        android:layout_weight="0"
        android:textSize="30sp"
        tools:ignore="RtlSymmetry" />
    <EditText
        android:id="@+id/signup_email"
        android:layout_marginTop="30dp"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:drawableStart="@drawable/baseline_person_24"
        android:paddingStart="10dp"
        android:text="@string/enter_email_adress"
        android:background="@drawable/login_page_edittext"
        android:layout_weight="0"
        android:inputType="textEmailAddress"
        android:textSize="30sp"
        tools:ignore="RtlSymmetry" />
    <EditText
        android:id="@+id/signup_phone"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:drawableStart="@drawable/baseline_phone_24"
        android:paddingStart="10dp"
        android:text="@string/enter_mobile_number"
        android:background="@drawable/login_page_edittext"
        android:layout_weight="0"
        android:inputType="phone"
        android:textSize="30sp"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/signup_password"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:paddingStart="10dp"
        android:hint="@string/password"
        android:layout_marginTop="30dp"
        android:background="@drawable/login_page_edittext"
        android:drawableStart="@drawable/baseline_lock_24"
        android:layout_weight="0"
        android:inputType="textPassword"
        tools:ignore="RtlSymmetry" />
    <EditText
        android:id="@+id/confirm_password"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:paddingStart="10dp"
        android:hint="@string/password"
        android:layout_marginTop="30dp"
        android:background="@drawable/login_page_edittext"
        android:drawableStart="@drawable/baseline_lock_24"
        android:layout_weight="0"

        android:inputType="textPassword" />

    <Button
        android:id="@+id/signup_btn"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginTop="30dp"
        android:layout_weight="0"
        android:fontFamily="cursive"
        android:text="@string/sign_up"
        android:textSize="30sp"/>

</LinearLayout>