<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_bg_image"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".SignIn">


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:helperText="@string/required"
        android:background="@drawable/login_page_edittext"
        app:helperTextTextColor="#E49059"
        app:startIconDrawable="@drawable/baseline_person_24"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_username"
            android:layout_width="360dp"
            android:layout_height="60dp"
            android:hint="@string/user_name"
            android:inputType="text"
            android:translationX="20dp" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/password"
        app:startIconDrawable="@drawable/baseline_lock_24"
        app:helperText="@string/required"
        android:background="@drawable/login_page_edittext"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        app:endIconMode="password_toggle"
        app:helperTextTextColor="#E49059"
        android:layout_marginStart=""
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_password"
            android:layout_width="364dp"
            android:layout_height="match_parent"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:translationX="20dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/login_btn"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:fontFamily="cursive"
        android:text="@string/login"
        android:textSize="30sp" />

</LinearLayout>